menambahkan paragraf baru di index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>Hello World</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui nulla dolores voluptatem vel. Laboriosam distinctio
+        sed sapiente, laborum reprehenderit magni laudantium! Suscipit exercitationem magnam at architecto, dolorem
+        dolor doloribus nemo?</p>
 </body>
 
 </html>
