--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui nulla dolores voluptatem vel. Laboriosam distinctio
         sed sapiente, laborum reprehenderit magni laudantium! Suscipit exercitationem magnam at architecto, dolorem
         dolor doloribus nemo?</p>
+
+    <ul>
+        <li>Hai</li>
+        <li>Kamu</li>
+    </ul>
 </body>
 
 </html>
